# simple-conda-ml-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  conda-linux-64.lock.yml  environment.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: Train.ipynb
