[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
authors = ["{{ cookiecutter.authors }}"]
readme = "README.md"
description = "{{ cookiecutter.project_description }}"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
omegaconf = "^2.3.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
numba = "^0.57.1"
shap = "^0.42.1"
mlflow = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
